Lab 3 After class

--- a/Lab-3/OpenGLGlutGlfwShaderTemplate/OpenGLGlutGlfwShaderTemplate.vcxproj
+++ b/Lab-3/OpenGLGlutGlfwShaderTemplate/OpenGLGlutGlfwShaderTemplate.vcxproj
@@ -22,7 +22,9 @@
     <ClCompile Include="..\..\Week3\Week3-6-InteractiveAnimationCube.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="..\..\Week3\Week3-7-UniformDemo.cpp" />
+    <ClCompile Include="..\..\Week3\Week3-7-UniformDemo.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="prepShader.cpp" />
     <ClCompile Include="Week3-2-AutomaticAnimationCube.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
@@ -31,7 +33,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Week3-4-SemiAutomaticAnimationQuad.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
