--- a/graphics_1-midterm_start/graphics_1.vcxproj
+++ b/graphics_1-midterm_start/graphics_1.vcxproj
@@ -78,6 +78,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="midterm.cpp" />
     <ClCompile Include="src\glad.c" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
