--- a/graphics_1-midterm_start/graphics_1.vcxproj.filters
+++ b/graphics_1-midterm_start/graphics_1.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="src\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="midterm.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
